# 3brown1blue

./: .envrc  .gitignore  .pre-commit-config.yaml  .sid-identity  DEVELOPMENT.md  README.md  ROADMAP.md  playlist-map.md  pyproject.toml
Resources/: README.md  extracted-mml-notes.md  free-books.md
common/: pyproject.toml
common/src/common/: __init__.py  data.py  logging.py  rng.py  viz.py
common/tests/: test_data.py  test_logging.py  test_rng.py  test_viz.py
docs/superpowers/plans/: 2026-05-07-3brown1blue-bootstrap.md
docs/superpowers/specs/: 2026-05-07-3brown1blue-repo-design.md
phase-01-math/: README.md  SOURCES.md  journal.md  pyproject.toml
phase-01-math/projects/01-vectors-and-linear-maps/: README.md  notes.ipynb
phase-01-math/projects/02-eigenstuff/: README.md  notes.ipynb
phase-01-math/projects/03-pca-from-scratch/: README.md  notes.ipynb
phase-01-math/projects/04-derivatives-and-chain-rule/: README.md  notes.ipynb
phase-01-math/projects/05-gradient-descent-by-hand/: README.md  notes.ipynb
phase-01-math/projects/06-probability-essentials/: README.md  notes.ipynb
phase-01-math/src/phase_01_math/: __init__.py
phase-02-nn-from-scratch/: README.md  SOURCES.md  journal.md  pyproject.toml
phase-02-nn-from-scratch/projects/01-perceptron/: README.md  notes.ipynb
phase-02-nn-from-scratch/projects/02-mlp-numpy/: README.md  notes.ipynb
phase-02-nn-from-scratch/projects/03-activations-and-losses/: README.md  notes.ipynb
phase-02-nn-from-scratch/projects/04-micrograd/: README.md  notes.ipynb
phase-02-nn-from-scratch/projects/05-mini-makemore/: README.md  notes.ipynb
phase-02-nn-from-scratch/projects/06-optim-zoo/: README.md  notes.ipynb
phase-02-nn-from-scratch/src/phase_02_nn_from_scratch/: __init__.py
phase-03-deep-learning/: README.md  SOURCES.md  journal.md  pyproject.toml
phase-03-deep-learning/projects/01-pytorch-fundamentals/: README.md  notes.ipynb
phase-03-deep-learning/projects/02-mnist-cnn/: README.md  notes.ipynb
phase-03-deep-learning/projects/03-cifar-resnet/: README.md  notes.ipynb
phase-03-deep-learning/projects/04-debugging-training/: README.md  notes.ipynb
phase-03-deep-learning/projects/05-lstm-text/: README.md  notes.ipynb
phase-03-deep-learning/projects/06-data-pipeline/: README.md  notes.ipynb
phase-03-deep-learning/src/phase_03_deep_learning/: __init__.py
phase-04-transformers/: README.md  SOURCES.md  journal.md  pyproject.toml
phase-04-transformers/projects/01-tokenization/: README.md  test_tokenization.py  tokenization.py
phase-04-transformers/projects/02-embeddings-and-positional/: README.md  embeddings_and_positional.py  test_embeddings_and_positional.py
phase-04-transformers/projects/03-attention-from-scratch/: README.md  attention_from_scratch.py  test_attention_from_scratch.py
phase-04-transformers/projects/04-nano-gpt/: README.md  nano_gpt.py  test_nano_gpt.py
phase-04-transformers/projects/05-nano-gpt-extensions/: README.md  nano_gpt_extensions.py  test_nano_gpt_extensions.py
phase-04-transformers/projects/06-llm-c-walkthrough/: README.md  llm_c_walkthrough.py  test_llm_c_walkthrough.py
phase-04-transformers/src/phase_04_transformers/: __init__.py
phase-05-llm-systems/: README.md  SOURCES.md  journal.md  pyproject.toml
phase-05-llm-systems/projects/01-local-llm-basics/: README.md  local_llm_basics.py  test_local_llm_basics.py
phase-05-llm-systems/projects/02-tool-use/: README.md  test_tool_use.py  tool_use.py
phase-05-llm-systems/projects/03-rag-baseline/: README.md  rag_baseline.py  test_rag_baseline.py
phase-05-llm-systems/projects/04-rag-improvements/: README.md  rag_improvements.py  test_rag_improvements.py
phase-05-llm-systems/projects/05-agent-loop/: README.md  agent_loop.py  test_agent_loop.py
phase-05-llm-systems/projects/06-evals/: README.md  evals.py  test_evals.py
phase-05-llm-systems/projects/07-guardrails-and-resource-budget/: README.md  guardrails_and_resource_budget.py  test_guardrails_and_resource_budget.py
phase-05-llm-systems/src/phase_05_llm_systems/: __init__.py
phase-06-production/: README.md  SOURCES.md  journal.md  pyproject.toml
phase-06-production/projects/01-fastapi-serving/: README.md  fastapi_serving.py  test_fastapi_serving.py
phase-06-production/projects/02-containerize/: README.md  containerize.py  test_containerize.py
phase-06-production/projects/03-observability/: README.md  observability.py  test_observability.py
phase-06-production/projects/04-caching-and-cost/: README.md  caching_and_cost.py  test_caching_and_cost.py
phase-06-production/projects/05-ci-cd/: README.md  ci_cd.py  test_ci_cd.py
phase-06-production/projects/06-deploy-real/: README.md  deploy_real.py  test_deploy_real.py
phase-06-production/projects/07-mlops-basics/: README.md  mlops_basics.py  test_mlops_basics.py
phase-06-production/src/phase_06_production/: __init__.py
posts/: 2026-05-07-why-3brown1blue.md  README.md
