[project]
name = "common"
version = "0.1.0"
description = "Shared utilities used across phase packages: RNG, data caching, plotting, logging."
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
