[project]
name = "phase-04-transformers"
version = "0.1.0"
description = "Transformers from scratch: tokenization, attention, decoder-only LM, scaling."
requires-python = ">=3.13"
dependencies = [
    "common",
    "numpy>=2.1",
    "torch>=2.5",
    "tiktoken>=0.8",
    "tqdm>=4.66",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/phase_04_transformers"]
