[project]
name = "phase-05-llm-systems"
version = "0.1.0"
description = "LLM systems with local models: prompting, tool use, RAG, agents, evals."
requires-python = ">=3.13"
dependencies = [
    "common",
    "ollama>=0.4",
    "chromadb>=0.5",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "tqdm>=4.66",
    "tiktoken>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/phase_05_llm_systems"]
